syntax = "proto3";

option csharp_namespace = "Api.issueCRUD";
package issue;
service IssueCRUD{
    rpc GetAllIssue(Empty) returns (ListIssues);
    rpc CreateIssue(AddIssue) returns (IssueStatus);
    rpc UpdateIssue(ModifyIssue) returns (IssueStatus);
}
message ListIssues {
    repeated IssueViewModel item=1;
}
message IssueViewModel{
     string Volumn =1;
       string  Description =2;
    string DateRelease =3;
  repeated ArticleViewModel Articles =4;
}
message ArticleViewModel {
     string Title =1;
     string Content =2;
     string Status =3;
     string AuthorName =4;
}
message AddIssue{
	 string Volumn =1;
    string Description=2;
    string DateRelease =3;
}
message ModifyIssue{
     string Id=1;
     string Volumn =2;
    string Description=3;
  string DateRelease =4;
}
message Empty {

}
message IssueStatus {
    bool isTrue=1;
}
